# trollfabriken-video-compose-bootstrap

./: .gitignore
.github/workflows/: publish.yml  test.yml
video-compose/: PUBLISH.md  README.md  pyproject.toml
video-compose/.github/workflows/: ci.yml  publish.yml
video-compose/examples/: demo_all_fx.json  minimal.json  sales_report.json
video-compose/scripts/: gen_preview_placeholders.py  render_all_templates.py
video-compose/src/video_compose/: __init__.py  _codec.py  _fonts.py  api.py  brand.py  cli.py  social.py
video-compose/src/video_compose/assembler/: __init__.py  assembler.py  concat.py  condition.py  encode.py  iteration.py  png_export.py
video-compose/src/video_compose/assets/: placeholders.py
video-compose/src/video_compose/audio/: __init__.py  beats.py  caption_translate.py  denoise.py  filler_words.py  mixer.py  pipeline.py  silence.py  subtitles.py  transcription.py  voiceover.py
video-compose/src/video_compose/components/: __init__.py  badge.html  countdown.html  lower_third.html  price_card.html  progress_bar.html  stat_callout.html  ticker.html  title_card.html
video-compose/src/video_compose/data/: __init__.py  api_source.py  csv_source.py  excel_source.py  fetcher.py  json_source.py  registry.py  sql_source.py
video-compose/src/video_compose/grade/: __init__.py  apply.py
video-compose/src/video_compose/jobs/: __init__.py  manager.py  runner.py
video-compose/src/video_compose/llm/: __init__.py  prompt_builder.py  spec_generator.py  spec_validator.py  template_instantiator.py  template_picker.py
video-compose/src/video_compose/overlays/: __init__.py  ai_html.py  ai_svg.py  audiogram.py  auto_caption.py  bar.py  blur_region.py  component.py  compositor.py  face_blur.py  gif.py  image.py  keyframes.py  lottie.py  qr_code.py  shapes.py  stars.py  svg.py  text.py  web.py  word_highlight.py
video-compose/src/video_compose/renderers/: __init__.py  base.py  blank.py  chart.py  dispatcher.py  fractal.py  geomap.py  image.py  mathviz.py  registry.py  screenshot.py  shape.py  slide.py  split_screen.py  still.py  tts.py  video.py
video-compose/src/video_compose/schema/: __init__.py  spec.py  tvcs_schema.json  validator.py
video-compose/src/video_compose/server/: app.py
video-compose/src/video_compose/templates/: __init__.py  config.py  engine.py  registry.py
video-compose/src/video_compose/templates/bundled/ambient/: ambient_pre_show_loop.json  fractal_title_card.json  neon_countdown.json
video-compose/src/video_compose/templates/bundled/audio/: audiogram_podcast.json
video-compose/src/video_compose/templates/bundled/brand/: company_logo_reveal.json
video-compose/src/video_compose/templates/bundled/business/: okr_quarterly_review.json  pitch_deck_hook.json  pitch_deck_hook_light.json
video-compose/src/video_compose/templates/bundled/creator/: youtube_channel_intro.json  youtube_channel_intro_portrait.json  youtube_end_screen.json
video-compose/src/video_compose/templates/bundled/data_story/: data_candlestick.json  data_europe_map.json  data_radar_performance.json  data_sankey_flow.json  data_story_bar_chart.json  data_story_bar_chart_light.json  data_story_kpi_dashboard.json  data_story_line_chart.json  data_treemap.json  data_waterfall_bridge.json  data_world_choropleth.json
video-compose/src/video_compose/templates/bundled/entertainment/: esports_match_overlay.json  movie_end_credits.json  music_release_card.json  podcast_chapter_card.json
video-compose/src/video_compose/templates/bundled/event/: event_agenda.json  event_speaker_card.json
video-compose/src/video_compose/templates/bundled/explainer/: bullet_point_list.json  explainer_funnel.json  explainer_numbered_steps.json  explainer_pros_cons.json  explainer_timeline.json  faq_qa.json  numbered_step_list.json  tutorial_steps.json
video-compose/src/video_compose/templates/bundled/financial/: annual_report_summary.json  earnings_quarterly.json
video-compose/src/video_compose/templates/bundled/lower_third/: interview_lower_third.json  lower_third_cnn.json  lower_third_score_bug.json  lower_third_scrolling_ticker.json
video-compose/src/video_compose/templates/bundled/news/: breaking_news_alert.json
video-compose/src/video_compose/templates/bundled/people/: team_spotlight.json  testimonial_review.json  testimonial_review_light.json  testimonial_review_portrait.json
video-compose/src/video_compose/templates/bundled/presentation/: presentation_corporate.json  presentation_corporate_light.json
video-compose/src/video_compose/templates/bundled/product/: app_store_review.json  before_after_comparison.json  pricing_card.json  product_feature_split.json
video-compose/src/video_compose/templates/bundled/product_launch/: product_launch_dark.json  product_launch_dark_portrait.json  product_launch_minimal.json  product_launch_minimal_light.json
video-compose/src/video_compose/templates/bundled/real_estate/: real_estate_listing.json
video-compose/src/video_compose/templates/bundled/social/: quote_with_photo.json  social_announcement.json  social_collab_announcement.json  social_countdown.json  social_milestone_counter.json  social_motivational.json  social_motivational_portrait.json  social_poll_result.json  social_proof_numbers.json  social_quote_card.json  social_quote_card_portrait.json  social_tiktok_hook.json
video-compose/src/video_compose/templates/bundled/sports/: sports_match_result.json
video-compose/src/video_compose/templates/bundled/swedish/: swedish_election_map.json  swedish_news_opener.json  swedish_regional_kpi.json  swedish_valdistrikt_map.json
video-compose/src/video_compose/tools/: bg_remove.py  caption_check.py  chapters.py  chunker.py  highlight.py  report.py  repurpose.py  scene_detect.py  smart_crop.py  thumbnail.py
video-compose/src/video_compose/transition/: __init__.py  apply.py
video-compose/tests/: test_data_adapters.py  test_data_resolver.py  test_prompt_builder.py  test_template_engine.py  test_template_registry.py  test_validator.py
