[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "video-compose"
version = "0.9.0"
description = "JSON-driven video composition engine for the Trollfabriken FX ecosystem"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Trollfabriken", email = "tomasamlov@gmail.com" }]
keywords = ["video", "composition", "json2video", "ffmpeg", "presentation", "tvcs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Core dependencies — only stdlib-equivalent; everything fx-related is optional
dependencies = [
    "numpy>=1.24",
    "pillow>=10.0",
    "click>=8.1",
    "pydantic>=2.0",
]

[project.optional-dependencies]
# Individual FX packages
mathviz  = ["mathviz-fx"]
chart    = ["chart-fx"]
geomap   = ["geo-map-fx"]
shape    = ["shape-fx"]
fractal  = ["fractal-fx"]
grade    = ["color-fx"]
cut      = ["cut-fx"]
text     = ["text-fx"]
still    = ["still-motion"]
slide    = ["slide-render", "playwright"]
audio    = ["talk-cast", "audio-arrange"]
web      = ["web-overlay", "playwright"]
svg      = ["cairosvg>=2.5"]
ai       = ["anthropic>=0.40", "cairosvg>=2.5"]
qr       = ["qrcode[pil]>=7.4"]
lottie   = ["lottie>=0.6"]
server   = ["fastapi>=0.100", "uvicorn[standard]>=0.22"]

# AI-powered audio tools (transcription, beat detection, noise removal)
audio-ai = ["librosa>=0.10", "noisereduce>=3.0", "soundfile>=0.12", "openai>=1.0"]

# AI-powered visual tools (background removal, face detection)
visual-ai = ["rembg>=2.0", "opencv-python>=4.8"]

# LLM-powered spec generation and template AI
llm      = ["openai>=1.0"]

# Data source adapters
data     = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "sqlalchemy>=2.0",
    "jmespath>=1.0",
]

# Convenience bundles
fx       = ["video-compose[mathviz,chart,geomap,shape,fractal,grade,cut,text,still]"]
all      = ["video-compose[fx,slide,audio,web,svg,ai,data,llm,qr,server,audio-ai,visual-ai]"]

# Development
dev      = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "hatch",
]

[project.urls]
Homepage   = "https://github.com/tomastimelock/trollfabriken-video-compose-bootstrap"
Repository = "https://github.com/tomastimelock/trollfabriken-video-compose-bootstrap"
Issues     = "https://github.com/tomastimelock/trollfabriken-video-compose-bootstrap/issues"

[project.scripts]
video-compose = "video_compose.cli:main"
vc-thumbnail = "video_compose.tools.thumbnail:main"
vc-report = "video_compose.tools.report:main"

[tool.hatch.build.targets.wheel]
packages = ["src/video_compose"]

[tool.hatch.build.targets.wheel.force-include]
"src/video_compose/assets/placeholders" = "video_compose/assets/placeholders"

[tool.hatch.version]
path = "src/video_compose/__init__.py"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
